<resources>
    <string name="app_name">Wii amiibos</string>
    <string name="search_hint">search character</string>
    <string name="button_search">Search</string>
    <string name="amibo_series">Amiibo Series:</string>
    <string name="character_name">Character:</string>
    <string name="release_eu">Release Date (EU):</string>
    <string name="release_au">Release Date (AU):</string>
    <string name="release_jp">Release Date (JP):</string>
    <string name="type">Type:</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="amiibo_list">Amiibo List</string>
    <string name="button_share">Share</string>
    <string name="share_title">Share Character</string>
    <string name="sharing_text">Share text</string>
    <string name="screenshot_take_failed">Error share screenshot</string>
</resources>
